<resources>
    <string name="app_name">BloodHub</string>
    <string name="bloodType_prompt">Choose a Blood Type</string>



    <string-array name="bloodType_arrays">
        <item>All Types</item>
        <item>ABRh+</item>
        <item>ABRh-</item>
        <item>ARh+</item>
        <item>ARh-</item>
        <item>BRh+</item>
        <item>BRh-</item>
        <item>0Rh+</item>
        <item>0Rh-</item>
        <item>Thrombocyte (All Types)</item>
        <item>Thrombocyte ABRh+</item>
        <item>Thrombocyte ABRh-</item>
        <item>Thrombocyte ARh+</item>
        <item>Thrombocyte ARh-</item>
        <item>Thrombocyte BRh+</item>
        <item>Thrombocyte BRh-</item>
        <item>Thrombocyte 0Rh+</item>
        <item>Thrombocyte 0Rh-</item>
    </string-array>


    <string-array name="sehirler_arr" >
        <item>Please Select One</item>
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkâri</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>İçel (Mersin)</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>



    <string name="editTextlocation">Location </string>
    <string name="editTexthospitalName"> Hospital Name </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="push">Push</string>
    <string name="sms">SMS</string>
    <string name="mail">Mail</string>

    <string name="not_type">Notification Type</string>

    <string name="blo_type">Blood Type</string>
    <string name="locationName">Select Location</string>

    <string name="user_birthdate_reg">Select Your Birthdate</string>


    <string name="user_city">Select your City</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_profile2">ProfileActivity2</string>
    <string name="title_activity_create_notification">Create Notification</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_nregister_here">Dont\' have an account? Register Here</string>
    <string name="logo">logo</string>
    <string name="already_registered_nlogin_here">Already Registered? Login Here</string>
    <string name="register">REGISTER</string>
    <string name="birthday">Birthday</string>
    <string name="bloodtype">BloodType</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="your_address">Your Address</string>
    <string name="surname">Surname</string>
    <string name="firstname">Firstname</string>
    <string name="email">Email</string>
    <string name="identitynumber">IdentityNumber</string>
    <string name="received_notifications">Received Notifications</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="blog">Blog</string>
    <string name="homepage">Homepage</string>
    <string name="logout">Logout</string>
    <string name="event_map">Event Map</string>
    <string name="options_main">Option Main</string>
    <string name="options_1">Opt 1</string>
    <string name="options_2">Opt 2</string>
    <string name="options_3">Opt 3</string>
    <string name="options_4">Opt 4</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="old_password">Please enter your current password</string>
    <string name="new_password">Enter new password</string>
    <string name="new_password_confirmation">Enter the new password again</string>
    <string name="change">Change Password</string>
    <string name="profile">Profile</string>

</resources>