<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/register_scroolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/editTextUsername"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextFirstName"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/firstname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextSurName"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/surname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/editTextIdentityNumber"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/identitynumber"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextTelephone"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/telephone_number"
                android:inputType="phone" />


            <TextView
                android:id="@+id/textViewUserCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_city"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Spinner
                android:id="@+id/city_spinner"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxHeight="48dp" />
            />


            <EditText
                android:id="@+id/editTextAddress"

                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="top|start"
                android:hint="@string/your_address"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/textViewBloodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/blo_type"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Spinner
                android:id="@+id/spinner1"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bloodType_arrays"
                android:spinnerMode="dialog"
                />

            <EditText
                android:id="@+id/editTextBirthdate"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/birthday"
                android:focusable="false"
                android:inputType="date" />


            <Button
                android:id="@+id/buttonRegister"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/already_registered_nlogin_here"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_push_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/txt_reg_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>

