<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/editTextnameSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:hint="Your Full Name Surname"
            android:inputType="text" />


        <EditText
            android:id="@+id/editTextlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/editTextlocation"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTexthospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/editTexthospitalName"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewBloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/blo_type"
            android:layout_gravity="left"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/blood_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/bloodType_arrays" />


        <TextView
            android:id="@+id/textViewNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/not_type"
            android:layout_gravity="left"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox android:id="@+id/checkbox_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/sms"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_push"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/push"
                android:onClick="onCheckboxClicked"/>

            <CheckBox android:id="@+id/checkbox_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/mail"
                android:onClick="onCheckboxClicked"/>

        </LinearLayout>
        <Button
            android:id="@+id/buttonNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="Send Notification" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="Dont' have an account?\nRegister Here"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>