<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="41dp"
            android:layout_weight="2"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@mipmap/bldlogo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/editTextUsername"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textNoSuggestions"
                android:background="@drawable/my_transaction_layout"
                android:layout_marginBottom="20dp"/>


            <EditText
                android:id="@+id/editTextPassword"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/my_transaction_layout"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/buttonLogin"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/dont_have_an_account_nregister_here"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>