<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bloodhub.android.activities.Blog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Your Status:"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <ToggleButton
                    android:id="@+id/availabilityToggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="Not Available"
                    android:textOn="Available" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Change Password"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <EditText
                android:id="@+id/oldPassword"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPassword"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPasswordConfirmation"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_password_confirmation"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonChange"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/change"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />


    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"
        android:choiceMode="singleChoice"
        android:descendantFocusability="blocksDescendants" />

</android.support.v4.widget.DrawerLayout>
